--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
 	</distributionManagement>
 	
 	<build>
-		<finalName>Landmark</finalName>
+		<finalName>Landmark1</finalName>
 		
 		<plugins>
 			<plugin>
